--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,50 @@
-.container {
+.body_container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: stretch;
+}
+
+.nav_container {
+  min-height: 6vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
+}
+
+.dash_container {
+  min-height: 94vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.nav_box {
+  min-height: 3rem;
+  min-width: 7rem;
+  margin: 0 0.1rem;
+
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+}
+
+.menu_pane {
+  min-height: 90vh;
+  margin-right: 0.2rem;
+
+  width: 20vw;
+  border: 1px solid #eaeaea;
+  border-radius: 15px;
+}
+
+.dash_pane {
+  min-height: 90vh;
+  width: 80vw;
+  border: 1px solid #eaeaea;
+  border-radius: 15px;
 }
 
 .title a {
@@ -19,16 +59,13 @@
 }
 
 .title {
-  margin: 0 0 1rem;
+  margin: 0.9rem;
   line-height: 1.15;
-  font-size: 3.6rem;
+  font-size: 1.6rem;
+  text-align: left;
 }
 
-.title {
-  text-align: center;
-}
 
-.title,
 .description {
   text-align: center;
 }
